# fedagent-chain

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FedAgent_Chain_Remediation_Plan.md  LICENSE  Makefile  README.md  REPAIR_LOG.md  SECURITY.md  debug_eval.py  environment.yml  per_round_debug.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  reproducibility_issue.md
.github/workflows/: ci.yml  docker.yml  docs.yml
configs/: default.yaml
configs/evaluation/: metrics.yaml
configs/experiment/: baseline_centralized.yaml  baseline_centralized_nn.yaml  baseline_local.yaml  europe_local_diagnosis.yaml  fedagent_chain_full.yaml
configs/experiment/ablation/: no_blockchain.yaml  no_dp.yaml  no_fairness.yaml  no_governance.yaml  no_multilingual.yaml
configs/experiment/lambda_sweep/: lambda_0.00.yaml  lambda_0.05.yaml  lambda_0.10.yaml  lambda_0.20.yaml  (+5 more)
configs/nodes/: china.yaml  europe.yaml  saudi_arabia.yaml  united_states.yaml
data/synthetic/: README.md
docker/: .dockerignore  Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: ethics.md  mkdocs.yml  paper_results_inventory.md  reproducibility.md  scientific_hardening.md
experiments/: manifest.yaml
experiments/results/: README.md  ablation_results.md  class_distribution.csv  communication_costs.csv  error_analysis.md  lambda_tradeoff.csv  repair_comparison_report.md  statistical_tests.csv  system_overhead.csv  table_2_model_performance.csv  table_2_multi_seed_summary.csv  table_3_fairness_results.csv  table_4_blockchain_results.csv  table_7_overhead.csv  table_ablation.csv  table_accessibility_inclusion.csv  table_blockchain_lifecycle.csv
experiments/results_temp/: table_2_model_performance.csv
experiments/verification_run/: config.json  provenance.json
logs/: phase0_artifact_checksums_before.txt  phase0_integration_baseline.txt  phase0_regression_baseline.txt  phase0_smoke_data.txt  phase0_smoke_simulation.txt  phase0_unit_baseline.txt
nodes/china/: local_trainer.py
nodes/europe/: data_loader.py
scratch/: gen_lambda_configs.py
scripts/: aggregate_multi_seed_results.py  export_blockchain_audit.py  generate_ablation_table.py  generate_accessibility_table.py  generate_agent_demonstrations.py  generate_dataset_diagnostics.py  generate_education_demonstrations.py  generate_figures.py  generate_lambda_tradeoff_plot.py  generate_synthetic_data.py  generate_system_overhead_plots.py  generate_tables.py  reproduce_paper_results.py  run_ablation_study.py  run_baselines.py  run_blockchain_audit.py  run_evaluation.py  run_federated_simulation.py  run_lambda_sweep.py  validate_checkpoints.py  verify_artifact_integrity.py  verify_submission_readiness.py
src/: __init__.py
src/agents/: __init__.py  accommodation_agent.py  base_agent.py  education_agent.py  employment_agent.py  governance_agent.py  multilingual_agent.py  upskilling_agent.py
src/blockchain/: __init__.py  chain.py
src/data/: __init__.py  dataset.py  education_catalog.py  schema.py  synthetic_generator.py
src/evaluation/: __init__.py  fairness_evaluator.py  metrics.py
src/federated/: __init__.py  aggregator.py  client.py  fairness.py  privacy.py  server.py
src/models/: __init__.py  baselines.py  employment_model.py
src/utils/: __init__.py  config.py  io_utils.py  logging_utils.py  seed_utils.py
src/visualization/: __init__.py  convergence_plot.py  node_performance_plot.py  styles.py
tests/: conftest.py
tests/integration/: test_blockchain_pipeline.py  test_federated_pipeline.py
tests/regression/: test_paper_results.py
tests/unit/: test_agents.py  test_aggregator.py  test_blockchain.py  test_config_loading.py  test_education_agent.py  test_fairness.py  test_fairness_alignment.py  test_metrics.py  test_new_agents.py  test_privacy.py  test_synthetic_generator.py
(+72 files in other folders)
