[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fedagent-chain"
version = "1.0.0"
description = "Secure Federated and Agentic AI for Disability-Inclusive Employment"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Toqeer Ali Syed", email = "t.syed@institution.edu"},
    {name = "Muhammad Shoaib Siddiqui"},
]
keywords = [
    "federated-learning", "agentic-ai", "blockchain",
    "disability-inclusion", "employment-matching",
    "multilingual-ai", "assistive-technology", "trustworthy-ai",
    "privacy-preserving", "fairness"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.26.1",
    "scipy>=1.11.3",
    "pandas>=2.1.2",
    "flwr>=1.6.0",
    "transformers>=4.35.2",
    "sentence-transformers>=2.2.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.4.2",
    "cryptography>=41.0.5",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.1",
    "structlog>=23.2.0",
    "mlflow>=2.8.1",
    "matplotlib>=3.8.1",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "streamlit>=1.28.2",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-timeout>=2.2.0",
    "black>=23.10.1",
    "ruff>=0.1.5",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.7",
    "mkdocstrings[python]>=0.24.0",
]
tracking = [
    "wandb>=0.16.0",
    "dvc>=3.30.1",
]

[project.urls]
Homepage = "https://github.com/fedagent-chain/fedagent-chain"
Documentation = "https://fedagent-chain.github.io/fedagent-chain"
Repository = "https://github.com/fedagent-chain/fedagent-chain"
"Bug Tracker" = "https://github.com/fedagent-chain/fedagent-chain/issues"
"Paper" = "https://doi.org/10.xxxx/xxxxx"

[project.scripts]
fedagent-train = "scripts.run_federated_simulation:main"
fedagent-eval = "scripts.run_evaluation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "nodes*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
exclude = '''
/(
    \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv
  | _build | buck-out | build | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "B", "I", "N", "UP", "ANN"]
ignore = ["E501", "ANN101", "ANN102", "ANN401"]
exclude = ["notebooks/", "*.ipynb"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "nodes"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["notebooks/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing -v"
asyncio_mode = "auto"
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "regression: marks tests as regression tests against paper values",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
